--- a/index.html
+++ b/index.html
@@ -2,23 +2,37 @@
 <html>
 <head>
 <style>
+body {background-color: #4274f4;}
+h1   {color: blue;}
+<!DOCTYPE html>
+<html>
+<head>
+<style>
 body {background-color: powderblue;}
 h1   {color: blue;}
 p    {color: red;}
+a {
+	color: white;
+    text-decoration:none;
+    text-align:center;
+}
 </style>
 </head>
 <body>
 
 
-<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<strong><span style="text-decoration: underline;"><em>A&amp;A</em></span></strong></p>
-<p>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<script src="script.js"></script>
-</p>
+<p> <em>A&amp;A</em></span></strong></p>
+
 <!-- Content -->
-<div><nav><a>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <span style="text-decoration: underline;">&nbsp;About Us</span> </a> <span style="text-decoration: underline;"><a> Pictures&nbsp;</a></span><a><span style="text-decoration: underline;">Connect</span> </a> <span style="text-decoration: underline;"><a> Videos</a></span></nav></div>
+	<div>
+    	<nav>
+              <a href="#">About Us </a> <span style="text-decoration: underline;"><a> 
+             <a href="#">Pictures</a></span><a><span style="text-decoration: underline;">
+              <a href="#">Connect</span> </a> <span style="text-decoration: underline;"><a> Videos</a></span></nav></div>
+
 <hr />
-<div><img src="https://images.unsplash.com/photo-1445205170230-053b83016050?ixlib=rb-0.3.5&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;s=1f7f71a25e279f4149d880e454715bc9&amp;auto=format&amp;fit=crop&amp;w=751&amp;q=80" div="" width="351" height="235" /></div>
+
+<div><img src="https://images.unsplash.com/photo-1445205170230-053b83016050?ixlib=rb-0.3.5&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;s=1f7f71a25e279f4149d880e454715bc9&amp;auto=format&amp;fit=crop&amp;w=751&amp;q=80" div="" width="351" height="235" text-align: center;} /></div>
 <table style="width: 616px;" height="86">
 <tbody>
 <tr>
@@ -42,3 +56,15 @@ p    {color: red;}
 <p><iframe width="420" height="345" src=""></iframe></p>
   </body>
   </html>
+© 2018 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Help
+Contact GitHub
+API
+Training
+Shop
+Blog
+About
