--- a/index.html
+++ b/index.html
@@ -1,70 +1,67 @@
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-body {background-color: #4274f4;}
-h1   {color: blue;}
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-body {background-color: powderblue;}
-h1   {color: blue;}
-p    {color: red;}
-a {
-	color: white;
-    text-decoration:none;
-    text-align:center;
-}
-</style>
-</head>
-<body>
-
-
-<p> <em>A&amp;A</em></span></strong></p>
-
-<!-- Content -->
-	<div>
-    	<nav>
-              <a href="#">About Us </a> <span style="text-decoration: underline;"><a> 
-             <a href="#">Pictures</a></span><a><span style="text-decoration: underline;">
-              <a href="#">Connect</span> </a> <span style="text-decoration: underline;"><a> Videos</a></span></nav></div>
-
-<hr />
-
-<div><img src="https://images.unsplash.com/photo-1445205170230-053b83016050?ixlib=rb-0.3.5&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;s=1f7f71a25e279f4149d880e454715bc9&amp;auto=format&amp;fit=crop&amp;w=751&amp;q=80" div="" width="351" height="235" text-align: center;} /></div>
-<table style="width: 616px;" height="86">
-<tbody>
-<tr>
-<td style="width: 612px;">
-<p style="text-align: center;"><em><strong>New Deals&nbsp;</strong></em></p>
-<p style="text-align: center;"><em><strong>Save 10% to 20%!</strong></em></p>
-<div style="text-align: center;"><img src="https://images.unsplash.com/photo-1483985988355-763728e1935b?ixlib=rb-0.3.5&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;s=828346ed697837ce808cae68d3ddc3cf&amp;auto=format&amp;fit=crop&amp;w=200&amp;q=100" width="268" height="178" /></div>
-</td>
-</tr>
-</tbody>
-</table>
-<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<img src="https://images.unsplash.com/photo-1515289561319-9274d646207f?ixlib=rb-0.3.5&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;s=9a171ca5513e38a2e2806e01b86dda21&amp;auto=format&amp;fit=crop&amp;w=234&amp;q=80" /></p>
-<p>;<img src="https://images.unsplash.com/photo-1504633273314-6a929fcd7090?ixlib=rb-0.3.5&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;s=73aeff1876133560dbd3555e9c3d0ad1&amp;auto=format&amp;fit=crop&amp;w=334&amp;q=80" width="313" height="470" /></p>
-<table style="width: 603px;" height="269">
-<tbody>
-<tr>
-<td style="width: 593px;">&nbsp;</td>
-</tr>
-</tbody>
-</table>
-<p><iframe width="420" height="345" src=""></iframe></p>
-  </body>
-  </html>
-© 2018 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Help
-Contact GitHub
-API
-Training
-Shop
-Blog
-About
+-<!DOCTYPE html>
+-<html>
+-<head>
+-<style>
+-body {background-color: #4274f4;}
+-h1   {color: blue;}
+-<!DOCTYPE html>
+-<html>
+-<head>
+-<style>
+-body {background-color: powderblue;}
+-h1   {color: blue;}
+-p    {color: red;}
+-a {
+-	color: white;
+-    text-decoration:none;
+-    text-align:center;
+-}
+-</style>
+-</head>
+-<body>
+-
+-
+-<p> <em>A&amp;A</em></span></strong></p>
+-
++<p style="text-align: center;"><em>A&amp;A</em></p>
+ <!-- Content -->
+-	<div>
+-    	<nav>
+-              <a href="#">About Us </a> <span style="text-decoration: underline;"><a> 
+-             <a href="#">Pictures</a></span><a><span style="text-decoration: underline;">
+-              <a href="#">Connect</span> </a> <span style="text-decoration: underline;"><a> Videos</a></span></nav></div>
+-
++<div><nav><a href="#">About Us </a> <span style="text-decoration: underline;"><a href="#">Pictures</a></span><a><span style="text-decoration: underline;"> </span></a><a href="#">Connect</a> <span style="text-decoration: underline;"><a> Videos</a></span></nav></div>
+ <hr />
+-
+-<div><img src="https://images.unsplash.com/photo-1445205170230-053b83016050?ixlib=rb-0.3.5&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;s=1f7f71a25e279f4149d880e454715bc9&amp;auto=format&amp;fit=crop&amp;w=751&amp;q=80" div="" width="351" height="235" text-align: center;} /></div>
++<div><img src="https://images.unsplash.com/photo-1445205170230-053b83016050?ixlib=rb-0.3.5&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;s=1f7f71a25e279f4149d880e454715bc9&amp;auto=format&amp;fit=crop&amp;w=751&amp;q=80" div="" width="351" height="235" text-align:="" center="" /></div>
+ <table style="width: 616px;" height="86">
+ <tbody>
+ <tr>
+@@ -44,27 +14,21 @@
+ </tr>
+ </tbody>
+ </table>
+-<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<img src="https://images.unsplash.com/photo-1515289561319-9274d646207f?ixlib=rb-0.3.5&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;s=9a171ca5513e38a2e2806e01b86dda21&amp;auto=format&amp;fit=crop&amp;w=234&amp;q=80" /></p>
+-<p>;<img src="https://images.unsplash.com/photo-1504633273314-6a929fcd7090?ixlib=rb-0.3.5&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;s=73aeff1876133560dbd3555e9c3d0ad1&amp;auto=format&amp;fit=crop&amp;w=334&amp;q=80" width="313" height="470" /></p>
++<p><img src="https://images.unsplash.com/photo-1515289561319-9274d646207f?ixlib=rb-0.3.5&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;s=9a171ca5513e38a2e2806e01b86dda21&amp;auto=format&amp;fit=crop&amp;w=234&amp;q=80" /><img src="https://images.unsplash.com/photo-1504633273314-6a929fcd7090?ixlib=rb-0.3.5&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;s=73aeff1876133560dbd3555e9c3d0ad1&amp;auto=format&amp;fit=crop&amp;w=334&amp;q=80" width="231" height="348" /></p>
++<p></p>
+ <table style="width: 603px;" height="269">
+ <tbody>
+ <tr>
+-<td style="width: 593px;">&nbsp;</td>
++<td style="width: 593px; text-align: center;">Men</td>
++<td style="width: 593px; text-align: center;">&nbsp;Women</td>
++<td style="width: 593px; text-align: center;">Children</td>
++</tr>
++<tr>
++<td style="width: 593px; text-align: center;">Shoes</td>
++<td style="width: 593px; text-align: center;">Accessories</td>
++<td style="width: 593px; text-align: center;">Sign Up for Premium Deals!</td>
+ </tr>
+ </tbody>
+ </table>
+-<p><iframe width="420" height="345" src=""></iframe></p>
+-  </body>
+-  </html>
