--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
+<p></p>
+<div>
 <p style="text-align: center;"><em>A&amp;A</em></p>
+</div>
 <!-- Content -->
-<div><nav><a href="#">About Us </a> <span style="text-decoration: underline;"><a href="#">Pictures</a></span><a><span style="text-decoration: underline;"> </span></a><a href="#">Connect</a> <span style="text-decoration: underline;"><a> Videos</a></span></nav></div>
-<hr />
+<div>
+<div style="text-align: right;"><nav><a href="#">About Us </a> <span style="text-decoration: underline;"><a href="#">Pictures</a></span><a><span style="text-decoration: underline;"> </span></a><a href="#">Connect</a> <span style="text-decoration: underline;"><a> Videos</a></span></nav></div>
+</div>
+<div><hr /></div>
+<div>
 <div><img src="https://images.unsplash.com/photo-1445205170230-053b83016050?ixlib=rb-0.3.5&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;s=1f7f71a25e279f4149d880e454715bc9&amp;auto=format&amp;fit=crop&amp;w=751&amp;q=80" div="" width="351" height="235" text-align:="" center="" /></div>
+</div>
+<div>
 <table style="width: 616px;" height="86">
 <tbody>
 <tr>
@@ -14,8 +22,14 @@
 </tr>
 </tbody>
 </table>
+</div>
+<div>
 <p><img src="https://images.unsplash.com/photo-1515289561319-9274d646207f?ixlib=rb-0.3.5&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;s=9a171ca5513e38a2e2806e01b86dda21&amp;auto=format&amp;fit=crop&amp;w=234&amp;q=80" /><img src="https://images.unsplash.com/photo-1504633273314-6a929fcd7090?ixlib=rb-0.3.5&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;s=73aeff1876133560dbd3555e9c3d0ad1&amp;auto=format&amp;fit=crop&amp;w=334&amp;q=80" width="231" height="348" /></p>
+</div>
+<div>
 <p></p>
+</div>
+<div>
 <table style="width: 603px;" height="269">
 <tbody>
 <tr>
@@ -30,5 +44,11 @@
 </tr>
 </tbody>
 </table>
+</div>
+<div>
 <p><img src="https://images.unsplash.com/photo-1445796886651-d31a2c15f3c9?ixlib=rb-0.3.5&amp;s=091c7c0f68cb8acbc31058a3fa3a3633&amp;auto=format&amp;fit=crop&amp;w=1500&amp;q=80" height="306" width="638" /></p>
+</div>
+<div>
 <p>&nbsp;&copy; 2018 GitHub, Inc. Terms Privacy Security Status Help Contact GitHub API Training Shop Blog About &copy; 2018 GitHub, Inc. Terms Privacy Security Status Help Contact GitHub API Training Shop Blog About</p>
+</div>
+<p><a href="www.google.com">google</a></p>
