--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
 <table style="width: 603px;" height="269">
 <tbody>
 <tr>
-<td style="width: 593px; text-align: center;">Men</td>
-<td style="width: 593px; text-align: center;">&nbsp;Women</td>
-<td style="width: 593px; text-align: center;">Children</td>
+<td style="width: 593px; text-align: center;"><a href="#">Men </a></td>
+<td style="width: 593px; text-align: center;"><a href="#">Women </a></td>
+<td style="width: 593px; text-align: center;"><a href="#">Children </a></td>
 </tr>
 <tr>
-<td style="width: 593px; text-align: center;">Shoes</td>
-<td style="width: 593px; text-align: center;">Accessories</td>
-<td style="width: 593px; text-align: center;">Sign Up for Premium Deals!</td>
+<td style="width: 593px; text-align: center;"><a href="#">Shoes</a></td>
+<td style="width: 593px; text-align: center;"><a href="#">Accessories </a></td>
+  <td style="width: 593px; text-align: center;"><a href="#">Sign Up for Premium Deals!</a></td>
 </tr>
 </tbody>
 </table>
@@ -49,6 +49,5 @@
 <p><img src="https://images.unsplash.com/photo-1445796886651-d31a2c15f3c9?ixlib=rb-0.3.5&amp;s=091c7c0f68cb8acbc31058a3fa3a3633&amp;auto=format&amp;fit=crop&amp;w=1500&amp;q=80" height="306" width="638" /></p>
 </div>
 <div>
-  <p><a href="www.google.com">google</a></p>
 <p>&nbsp;&copy; 2018 GitHub, Inc. Terms Privacy Security Status Help Contact GitHub API Training Shop Blog About &copy; 2018 GitHub, Inc. Terms Privacy Security Status Help Contact GitHub API Training Shop Blog About</p>
 </div>
